--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "libphonenumber-js": "1.4.2",
     "lodash": "^4.17.13",
     "match-sorter": "^2.3.0",
-    "mdi-material-ui": "^6.2.0",
+    "mdi-material-ui": "5.8.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
