Connect to mongodb with auth

--- a/.env.standalone.prod
+++ b/.env.standalone.prod
@@ -1,7 +1,7 @@
 METEOR_DISABLE_OPTIMISTIC_CACHING=1
 METEOR_WATCH_POLLING_INTERVAL_MS=10000
-MONGO_OPLOG_URL=mongodb://anvuong.xyz:27017/local
-MONGO_URL=mongodb://anvuong.xyz:27017/reaction
+MONGO_OPLOG_URL=mongodb://<user>:<pass>@anvuong.xyz:27017/local?authSource=admin
+MONGO_URL=mongodb://<user>:<pass>@anvuong.xyz:27017/reaction?authSource=admin
 OAUTH2_ADMIN_URL=http://localhost:4445
 OAUTH2_IDP_PUBLIC_CHANGE_PASSWORD_URL=http://anvuong.xyz:4100/account/change-password?email=EMAIL&from=FROM
 OAUTH2_PUBLIC_URL=http://anvuong.xyz:4444
